@@ -17,3 +17,4 @@ Bug fixes
  * Prevent focused button labels from displaying as white on white (Karran Bessen)
  * Avoid showing preview button on moderation dashboard for page types with preview disabled (Dino Perovic)
  * Prevent oversized buttons in moderation dashboard panel (Dan Braghis)
+ * ``create_log_entries_from_revisions`` now handles revisions that cannot be restored due to foreign key constraints (Matt Westcott)
