@@ -29,6 +29,7 @@ Changelog
  * Fix: Prevent focused button labels from displaying as white on white (Karran Bessen)
  * Fix: Avoid showing preview button on moderation dashboard for page types with preview disabled (Dino Perovic)
  * Fix: Prevent oversized buttons in moderation dashboard panel (Dan Braghis)
+ * Fix: `create_log_entries_from_revisions` now handles revisions that cannot be restored due to foreign key constraints (Matt Westcott)
 
 
 2.10.1 (26.08.2020)
